# backend/docs/swagger.json
@@ -250,7 +250,7 @@
                 }
             }
         },
-        "/kermesses/{id}": {
+        "/kermesses/{kermesse_id}": {
             "get": {
                 "security": [
                     {
@@ -269,7 +269,7 @@
                     {
                         "type": "integer",
                         "description": "ID de la kermesse",
-                        "name": "id",
+                        "name": "kermesse_id",
                         "in": "path",
                         "required": true
                     }
@@ -316,7 +316,7 @@
                     {
                         "type": "integer",
                         "description": "ID de la kermesse",
-                        "name": "id",
+                        "name": "kermesse_id",
                         "in": "path",
                         "required": true
                     },
@@ -372,7 +372,7 @@
                     {
                         "type": "integer",
                         "description": "ID de la kermesse",
-                        "name": "id",
+                        "name": "kermesse_id",
                         "in": "path",
                         "required": true
                     }
@@ -396,7 +396,7 @@
                 }
             }
         },
-        "/kermesses/{id}/participants/{user_id}": {
+        "/kermesses/{kermesse_id}/participants/{user_id}": {
             "post": {
                 "security": [
                     {
@@ -415,7 +415,7 @@
                     {
                         "type": "integer",
                         "description": "ID de la kermesse",
-                        "name": "id",
+                        "name": "kermesse_id",
                         "in": "path",
                         "required": true
                     },
@@ -443,7 +443,7 @@
                 }
             }
         },
-        "/kermesses/{id}/stands/{stand_id}": {
+        "/kermesses/{kermesse_id}/stands/{stand_id}": {
             "post": {
                 "security": [
                     {
@@ -462,7 +462,7 @@
                     {
                         "type": "integer",
                         "description": "ID de la kermesse",
-                        "name": "id",
+                        "name": "kermesse_id",
                         "in": "path",
                         "required": true
                     },
@@ -479,6 +479,127 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.MessageResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/kermesses/{kermesse_id}/stands/{stand_id}/player-scores/{user_id}": {
+            "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Permet à un organisateur ou admin d'ajouter ou de mettre à jour le score d'un utilisateur pour un stand spécifique",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Stands"
+                ],
+                "summary": "Ajouter ou mettre à jour un score pour un utilisateur spécifique et un stand",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID de la kermesse",
+                        "name": "kermesse_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "ID du stand",
+                        "name": "stand_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "ID de l'utilisateur",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Score à ajouter",
+                        "name": "score",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.ScoreRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Score ajouté ou mis à jour avec succès",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/models.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Permet à un gérant de stand ou organisateur de supprimer le score d'un utilisateur pour un stand spécifique d'une kermesse",
+                "tags": [
+                    "Stands"
+                ],
+                "summary": "Supprimer un score pour un utilisateur et un stand",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ID de la kermesse",
+                        "name": "kermesse_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "ID du stand",
+                        "name": "stand_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "ID de l'utilisateur",
+                        "name": "user_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Score supprimé avec succès",
+                        "schema": {
+                            "type": "string"
                         }
                     },
                     "400": {
@@ -753,7 +874,7 @@
         },
         "/register": {
             "post": {
-                "description": "Crée un nouvel utilisateur",
+                "description": "Crée un nouvel utilisateur avec le rôle \"parent\" par défaut",
                 "consumes": [
                     "application/x-www-form-urlencoded"
                 ],
@@ -783,13 +904,6 @@
                         "type": "string",
                         "description": "Adresse e-mail",
                         "name": "email",
-                        "in": "formData",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Rôle de l'utilisateur",
-                        "name": "role",
                         "in": "formData",
                         "required": true
                     }
@@ -910,7 +1024,7 @@
                         "Bearer": []
                     }
                 ],
-                "description": "Ajoute un nouveau stand",
+                "description": "Ajoute un nouveau stand et associe l'utilisateur créateur en tant que propriétaire",
                 "consumes": [
                     "application/json"
                 ],
@@ -1141,24 +1255,21 @@
                 }
             }
         },
-        "/stands/{stand_id}/score": {
-            "post": {
+        "/stands/{stand_id}/players/{user_id}/score": {
+            "get": {
                 "security": [
                     {
                         "Bearer": []
                     }
                 ],
-                "description": "Permet à un utilisateur d'ajouter ou de mettre à jour son score pour un stand spécifique",
-                "consumes": [
-                    "application/json"
-                ],
+                "description": "Retourne le score d'un joueur pour un stand spécifique",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Stands"
                 ],
-                "summary": "Ajouter ou mettre à jour un score pour un utilisateur et un stand",
+                "summary": "Récupérer le score d'un joueur pour un stand spécifique",
                 "parameters": [
                     {
                         "type": "integer",
@@ -1168,59 +1279,22 @@
                         "required": true
                     },
                     {
-                        "description": "Score à ajouter",
-                        "name": "score",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.ScoreRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Score ajouté ou mis à jour avec succès",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/models.ErrorResponse"
-                        }
-                    }
-                }
-            },
-            "delete": {
-                "security": [
-                    {
-                        "Bearer": []
-                    }
-                ],
-                "description": "Permet à un utilisateur de supprimer son score pour un stand spécifique",
-                "tags": [
-                    "Stands"
-                ],
-                "summary": "Supprimer un score pour un utilisateur et un stand",
-                "parameters": [
-                    {
                         "type": "integer",
-                        "description": "ID du stand",
-                        "name": "stand_id",
+                        "description": "ID de l'utilisateur",
+                        "name": "user_id",
                         "in": "path",
                         "required": true
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Score supprimé avec succès",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.PlayerScore"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "404": {
+                        "description": "Not Found",
                         "schema": {
                             "$ref": "#/definitions/models.ErrorResponse"
                         }
@@ -2505,6 +2579,29 @@
                 "source": {
                     "description": "Source de paiement (ex: un token de carte)",
                     "type": "string"
+                }
+            }
+        },
+        "models.PlayerScore": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "score": {
+                    "type": "integer"
+                },
+                "stand_id": {
+                    "type": "integer"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
                 }
             }
         },
